@@ -1,0 +1,6 @@
+#sphinx-console {
+	background-color : #000;
+	color            : #fff;
+	height           : 50em;
+	width            : 100%;
+}
