@@ -1,3 +1,7 @@
+2013-04-19  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Install official TYPO3 ReStructuredText Tools provided by the Documentation Team
+
 2013-04-18  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK][DOC] Extension documentation
